[gd_scene load_steps=19 format=2]

[ext_resource path="res://scene/inlevel_scene/epic_crown/epic_crown_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/inlevel_scene/epic_crown/crown_rigid.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprite/epic_crown/level/epic_crown_sample.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://script/epic_crown/ecrown_cam.gd" type="Script" id=5]
[ext_resource path="res://script/epic_crown/epic_crown_global.gd" type="Script" id=6]
[ext_resource path="res://sprite/epic_crown/ui/player1score.png" type="Texture" id=7]
[ext_resource path="res://sprite/epic_crown/ui/player2score.png" type="Texture" id=8]
[ext_resource path="res://sprite/epic_crown/ui/player3score.png" type="Texture" id=9]
[ext_resource path="res://sprite/epic_crown/ui/player4score.png" type="Texture" id=10]
[ext_resource path="res://font/Mystery Font.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sprite/epic_crown/level/epic_crown_BG.png" type="Texture" id=12]
[ext_resource path="res://sprite/epic_crown/ui/timer_left.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=4]
size = 8
outline_color = Color( 0.694118, 0.109804, 0.152941, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 194, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 176, 32 )

[node name="epic_crown" type="Node"]
script = ExtResource( 6 )
powup_time_range1 = 25
powup_time_range2 = 50

[node name="game_end_timer" type="Timer" parent="."]
wait_time = 150.0
one_shot = true
autostart = true

[node name="powerup_timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect0" type="TextureRect" parent="CanvasLayer/Control2"]
margin_left = 23.0
margin_right = 99.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="CanvasLayer/Control2"]
margin_left = 105.0
margin_right = 181.0
margin_bottom = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control2"]
margin_left = 187.0
margin_right = 263.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control2"]
margin_left = 269.0
margin_right = 345.0
margin_bottom = 40.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="p0" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 2.0
margin_right = 137.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "SCORE:0000"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 130.0
margin_top = 2.0
margin_right = 219.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "SCORE:0000"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p2" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 212.0
margin_top = 2.0
margin_right = 301.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "SCORE:0000"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p3" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 294.0
margin_top = 2.0
margin_right = 383.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "SCORE:0000"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Control3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -21.0
margin_right = 23.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control3"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -16.0
margin_right = 20.0
custom_fonts/font = SubResource( 5 )
text = "2:30"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="powerup_pos" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="powerup_pos"]
position = Vector2( 64, 180 )
__meta__ = {
"_gizmo_extents_": 12.0
}

[node name="Position2D2" type="Position2D" parent="powerup_pos"]
position = Vector2( 212, 164 )
__meta__ = {
"_gizmo_extents_": 12.0
}

[node name="Position2D3" type="Position2D" parent="powerup_pos"]
position = Vector2( 346, 116 )
__meta__ = {
"_gizmo_extents_": 12.0
}

[node name="Position2D4" type="Position2D" parent="powerup_pos"]
position = Vector2( 195, 71 )
__meta__ = {
"_gizmo_extents_": 12.0
}

[node name="Position2D5" type="Position2D" parent="powerup_pos"]
position = Vector2( 85, 117 )
__meta__ = {
"_gizmo_extents_": 12.0
}

[node name="Camerawiht_shake" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.15, 1.178 )
limit_left = 0
limit_top = 0
limit_right = 368
limit_bottom = 212
editor_draw_limits = true
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Camerawiht_shake"]

[node name="Tween" type="Tween" parent="Camerawiht_shake"]

[node name="Player0" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 293, 115 )

[node name="Player1" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 65, 116 )
p_index = 1

[node name="Player2" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 175, 163 )
p_index = 2

[node name="Player3" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 166, 70 )
p_index = 3

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="EpicCrownSample" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 3 )
centered = false

[node name="EpicCrownSample2" type="Sprite" parent="StaticBody2D"]
z_index = -1
texture = ExtResource( 12 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 0, 192, 128, 192, 128, 176, 224, 176, 224, 192, 256, 192, 256, 128, 368, 128, 368, 212, 0, 212 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 66, 137 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 175, 91 )
shape = SubResource( 1 )

[node name="crown_rigid" parent="." instance=ExtResource( 2 )]
position = Vector2( 184, 26 )
impulse_onready = false

[node name="black_frame" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="black_frame"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -32, 88 )
scale = Vector2( 1, 5.28125 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="black_frame"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 400, 95 )
scale = Vector2( 1, 5.1875 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="black_frame"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 176, 244 )
rotation = -1.5708
scale = Vector2( 1, 7.12054 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="black_frame"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 176, -32 )
rotation = -1.5708
scale = Vector2( 1, 7.12054 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="black_frame"]
position = Vector2( 184, -32 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="black_frame"]
position = Vector2( 184, 244 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="black_frame"]
position = Vector2( -32, 106 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="black_frame"]
position = Vector2( 400, 105 )
rotation = -1.5708
shape = SubResource( 3 )

[connection signal="timeout" from="game_end_timer" to="." method="_on_game_end_timer_timeout"]
[connection signal="timeout" from="powerup_timer" to="." method="_on_powerup_timer_timeout"]
[connection signal="timeout" from="Camerawiht_shake/Timer" to="Camerawiht_shake" method="_on_Timer_timeout"]
